--- a/style.css
+++ b/style.css
@@ -5,32 +5,36 @@
 }
 
 body {
-    background-image: url(imagens/training-828741.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 0 auto;
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-    overflow-x: hidden;    
+    
+    
 }
 
 header {
     display: flex;
-    background-color: rgba(214, 213, 203, 0.212);
+    background-color: rgb(2, 2, 2);
     height: 5rem;
-    color: rgb(255, 255, 255);
     font-size: 20px;
     text-transform: uppercase;
+    color: white;
+}
+
+.container {
+    background-image: url(imagens/training-828741.jpg);
+    height: 60rem;
+    width: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 100%;    
+    margin-top: 0;
 }
 
 .navegacao {
     display: flex;
     align-items: center;
     gap: 2rem;
-    color: rgb(255, 255, 255);
     margin-top: 1.5rem;
-    font-size: 20px;    
+    font-size: 20px;
+    text-decoration: none;    
 }
 
 li {
@@ -44,14 +48,17 @@ li {
 }
 
 a {
-    color:rgb(255, 255, 255);
+    color: white;
+    text-decoration: none;
 }
+ li {
+    text-decoration-line: none;
+ }
 
 .texto {
     text-align: center;
     color: white;
     width: 58rem;
-    margin-top: 15rem;
     font-size: 2rem;
 }
 
@@ -71,5 +78,42 @@ a {
     width: 13rem;
     text-transform: uppercase;
     white-space: pre-wrap;
+}
+
+.planos {
+    background-image: url(imagens/woman-2260736.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 100%;    
+    display: flex;
+    height: 60rem;
+    align-items: center;
+    color: white;
+    text-align: center;
+}
+
+.caixa_planos {
+    display: flex;
+    align-items: center;    
+    gap: 5rem;
+    
+}
+
+.basic {
+    width: 20rem;
+    height: 30rem;
+    background-color:rgba(78, 153, 153, 0.164);
+}
+
+.plus {
+    width: 20rem;
+    height: 30rem;
+    background-color:rgba(78, 153, 153, 0.164);
+}
+
+.extreme {
+    width: 20rem;
+    height: 30rem;
+    background-color:rgba(78, 153, 153, 0.164);
 }
 
