--- a/style.css
+++ b/style.css
@@ -4,28 +4,21 @@
     font-family: sans-serif;
 }
 
-body {
-    
-    
-}
-
 header {
     display: flex;
-    background-color: rgb(2, 2, 2);
     height: 5rem;
     font-size: 20px;
     text-transform: uppercase;
     color: white;
 }
 
-.container {
-    background-image: url(imagens/training-828741.jpg);
-    height: 60rem;
-    width: auto;
+.master {   
+    background-image: url(imagens/adult-1850925.jpg); 
+    height: 100rem;
     background-repeat: no-repeat;
     background-size: cover;
+    width: auto;
     max-width: 100%;    
-    margin-top: 0;
 }
 
 .navegacao {
@@ -60,11 +53,13 @@ a {
     color: white;
     width: 58rem;
     font-size: 2rem;
+    margin-top: 18rem;
+
 }
 
 .botoes {
     text-align: center;
-    margin-top: 4rem;
+    margin-top: 8rem;
 }
 
 .botoes input {
@@ -80,40 +75,35 @@ a {
     white-space: pre-wrap;
 }
 
-.planos {
-    background-image: url(imagens/woman-2260736.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    max-width: 100%;    
-    display: flex;
-    height: 60rem;
-    align-items: center;
-    color: white;
-    text-align: center;
-}
-
 .caixa_planos {
     display: flex;
     align-items: center;    
     gap: 5rem;
-    
+    margin-top: 10rem;   
+    padding: 10px; 
 }
 
 .basic {
     width: 20rem;
     height: 30rem;
-    background-color:rgba(78, 153, 153, 0.164);
+    background-color:rgba(184, 185, 185, 0.164);
 }
 
 .plus {
     width: 20rem;
     height: 30rem;
-    background-color:rgba(78, 153, 153, 0.164);
+    background-color:rgba(184, 185, 185, 0.164);
 }
 
 .extreme {
     width: 20rem;
     height: 30rem;
-    background-color:rgba(78, 153, 153, 0.164);
+    background-color:rgba(184, 185, 185, 0.164);
 }
 
+.video {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 60rem;
+}
