--- a/style.css
+++ b/style.css
@@ -130,3 +130,18 @@ iframe {
     width: 50vw;
     height: 60vh;
   }
+  
+.agenda {
+    max-width: 100%;
+    background-color: black;
+    color: white;
+    height: 55rem;
+}
+
+.cadastro {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;    
+}
