--- a/style.css
+++ b/style.css
@@ -62,7 +62,20 @@ a {
     margin-top: 8rem;
 }
 
-.botoes input {
+.agendamento {
+    background-color: rgba(243, 243, 237, 0.507);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+    border: navajowhite;
+    font: normal solid;
+    width: 13rem;
+    text-transform: uppercase;
+    white-space: pre-wrap;
+}
+
+.contato {
     background-color: rgba(243, 243, 237, 0.507);
     padding: 1rem;
     border-radius: 0.5rem;
@@ -119,7 +132,6 @@ a {
     border-radius: 10px;
 }
 
-
 .video {
     display: flex;
     align-items: center;
@@ -131,17 +143,62 @@ iframe {
     height: 60vh;
   }
   
-.agenda {
-    max-width: 100%;
-    background-color: black;
-    color: white;
-    height: 55rem;
-}
-
-.cadastro {
-    width: 60%;
+.localidade {
+    background-color: rgba(14, 14, 19, 0.952);
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;    
+    height: 60rem;
+}
+
+.formulario_aula {
+    background-image: url(imagens/training-828741.jpg); 
+    height: 100rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: auto;
+    max-width: 100%;    
+    background-color: rgb(65, 65, 65);
+    height: 55rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(184, 179, 179, 0.219);
+    padding: 2rem;
+    border-radius: 10px;
+}
+
+form input {
+    width: 30rem;
+    margin: 1rem;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.cidades {
+    width: 30rem;
+    margin: 1rem;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.txt3 {
+    font-size: 30px;
+    text-transform: uppercase;
+    gap: 1;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 5rem;
+    color: white;
 }
