--- a/style.css
+++ b/style.css
@@ -219,3 +219,75 @@ footer {
     height: 5rem;
     color: white;
 }
+
+@media (max-width: 1145px) {
+    .localidade {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .planos {
+        align-items: center;
+        margin: 2rem;
+        text-align: center;
+    }
+}
+
+@media (max-width: 1030px) {
+
+    .master  {
+        width: 25rem;
+        height: 35rem;
+        padding: 2rem;
+    }
+    .plus {
+        width: 25rem;
+        height: 35rem;
+        padding: 2rem;
+    }
+    
+    .ligth {    
+        width: 25rem;
+        height: 35rem;
+        padding: 2rem;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .in {
+        max-width: 100%;
+        image-rendering: auto;
+        max-height: 100%;
+    }
+
+    a {
+        display: none;
+    }
+
+    .name {
+        margin-left: 12rem;
+        text-align: center;
+    }
+
+    .botoes {
+        margin-top: -7rem;
+    }
+
+    h1 {
+        font-size: 2rem;
+        margin: 10rem;
+        margin-right: 22rem;
+        margin-top: -15rem;
+    }
+
+    .caixa_planos {
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        height: 10rem;
+    }
+}
